--- a/randoms.template.html
+++ b/randoms.template.html
@@ -755,6 +755,16 @@
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Snow" id="snow" />
                         <label class="btn btn-small btn-right" for="snow">Snow</label>
                     </div>
+                    <div class="gen-specific g9" title="Select the current weather condition.">
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Acid Rain" id="acid-rain" />
+                        <label class="btn btn-xxwide btn-left" for="acid-rain">Acid Rain</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-xxwide btn-mid" for="thunderstorm">Thunderstorm</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="New Moon" id="new-moon" />
+                        <label class="btn btn-xxwide btn-mid" for="new-moon">New Moon</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-xxwide btn-right" for="fallout">Fallout</label>
+                    </div>
                     <div class="gen-specific g6 g7 hide" title="Select the current weather condition.">
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Harsh Sunshine" id="harsh-sunshine" />
                         <label class="btn btn-xxxwide btn-left" for="harsh-sunshine">Harsh Sunshine</label>
