--- a/honkalculate.template.html
+++ b/honkalculate.template.html
@@ -658,8 +658,18 @@
                         </span>
                         <span class="gen-specific g9">
                             <input class="visually-hidden" type="radio" name="weather" value="Snow" id="snow" />
-                            <label class="btn btn-small btn-right" for="snow">Snow</label>
+                            <label class="btn btn-small btn-left" for="snow">Snow</label>
                         </span>
+                    </div>
+                    <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
+                        <input class="visually-hidden" type="radio" name="weather" value="Acid Rain" id="acid-rain" />
+                        <label class="btn btn-xxwide btn-left" for="acid-rain">Acid Rain</label>
+                        <input class="visually-hidden" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-xxwide btn-mid" for="thunderstorm">Thunderstorm</label>
+                        <input class="visually-hidden" type="radio" name="weather" value="New Moon" id="new-moon" />
+                        <label class="btn btn-xxwide btn-right" for="new-moon">New Moon</label>
+                        <input class="visually-hidden" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-xxwide btn-mid" for="fallout">Fallout</label>
                     </div>
                     <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
                         <input class="visually-hidden" type="radio" name="weather" value="Harsh Sunshine" id="harsh-sunshine" />
