--- a/index.html
+++ b/index.html
@@ -723,6 +723,16 @@
                         </span>
                     </div>
                     <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Acid Rain" id="acid-rain" />
+                        <label class="btn btn-xxwide btn-left" for="acid-rain">Acid Rain</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-xxwide btn-mid" for="thunderstorm">Thunderstorm</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="New Moon" id="new-moon" />
+                        <label class="btn btn-xxwide btn-right" for="new-moon">New Moon</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-xxwide btn-mid" for="fallout">Fallout</label>
+                    </div>
+                    <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Harsh Sunshine" id="harsh-sunshine" />
                         <label class="btn btn-xxxwide btn-left" for="harsh-sunshine">Harsh Sunshine</label>
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Heavy Rain" id="heavy-rain" />
@@ -1577,26 +1587,26 @@
     <script type="text/javascript" src="./js/data/sets/gen1.js?d9901cd6"></script>
     <script type="text/javascript" src="./calc/data/types.js?3267f790"></script>
     <script type="text/javascript" src="./calc/data/natures.js?28612810"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?38448e91"></script>
+    <script type="text/javascript" src="./calc/data/abilities.js?c783d7d5"></script>
     <script type="text/javascript" src="./calc/data/moves.js?f7fac4ba"></script>
     <script type="text/javascript" src="./calc/data/items.js?0409f13e"></script>
     <script type="text/javascript" src="./calc/data/index.js?abecbd82"></script>
-    <script type="text/javascript" src="./calc/move.js?57ab9f0a"></script>
+    <script type="text/javascript" src="./calc/move.js?4a1aad80"></script>
     <script type="text/javascript" src="./calc/pokemon.js?1e459e1e"></script>
     <script type="text/javascript" src="./calc/field.js?bbf04408"></script>
     <script type="text/javascript" src="./calc/items.js?10064fda"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?8dd1ef76"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?a478655a"></script>
+    <script type="text/javascript" src="./calc/mechanics/util.js?d1c58723"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?301b64f4"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?a1115b60"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?dc25f845"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?0b2e506c"></script>
+    <script type="text/javascript" src="./calc/desc.js?7cb07d18"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?7a08f5eb"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?ab1d1f56"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?87d3bda8"></script>
     <script type="text/javascript" src="./js/moveset_import.js?b09106ef"></script>
 </div>
