--- a/index.template.html
+++ b/index.template.html
@@ -723,6 +723,16 @@
                         </span>
                     </div>
                     <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Acid Rain" id="acid-rain" />
+                        <label class="btn btn-xxwide btn-left" for="acid-rain">Acid Rain</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Thunderstorm" id="thunderstorm" />
+                        <label class="btn btn-xxwide btn-mid" for="thunderstorm">Thunderstorm</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="New Moon" id="new-moon" />
+                        <label class="btn btn-xxwide btn-right" for="new-moon">New Moon</label>
+                        <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Fallout" id="fallout" />
+                        <label class="btn btn-xxwide btn-mid" for="fallout">Fallout</label>
+                    </div>
+                    <div class="gen-specific g6 g7 g8 g9" title="Select the current weather condition.">
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Harsh Sunshine" id="harsh-sunshine" />
                         <label class="btn btn-xxxwide btn-left" for="harsh-sunshine">Harsh Sunshine</label>
                         <input class="visually-hidden calc-trigger" type="radio" name="weather" value="Heavy Rain" id="heavy-rain" />
