--- a/honkalculate.template.html
+++ b/honkalculate.template.html
@@ -755,6 +755,20 @@
                         </div>
                     </div>
                     <div class="btn-group">
+                        <div class="left" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                            <input class="visually-hidden" type="checkbox" id="ominousL" />
+                            <label class="btn btn-left" for="ominousL">Ominous Presence</label>
+                            <input class="visually-hidden" type="checkbox" id="fabledL" />
+                            <label class="btn btn-xwide btn-right" for="fabledL">Fabled Protector</label>
+                        </div>
+                        <div class="right" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                            <input class="visually-hidden" type="checkbox" id="fabledR" />
+                            <label class="btn btn-xwide btn-left" for="fabledR">Fabled Protector</label>
+                            <input class="visually-hidden" type="checkbox" id="ominousR" />
+                            <label class="btn btn-right" for="ominousR">Ominous Presence</label>
+                        </div>
+                    </div>
+                    <div class="btn-group">
                         <div class="left" title="Is this Pok&eacute;mon protected by Reflect and/or Light Screen?">
                             <input class="visually-hidden" type="checkbox" id="reflectL" />
                             <label class="btn btn-left" for="reflectL">Reflect</label>
