--- a/randoms.template.html
+++ b/randoms.template.html
@@ -863,6 +863,21 @@
                             </div></td>
                         </tr>
                         <tr>
+                            <td><div class="left" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                                <div hidden id="selectScreenInstruction">Does this pokemon have the ability Ominous Presence active or Fabled Protector?</div>
+                                <input aria-describedby="selectScreenInstruction" class="visually-hidden calc-trigger" type="checkbox" id="ominousL" />
+                                <label class="btn btn-left" for="ominousL">Ominous Presence</label>
+                                <input aria-describedby="selectScreenInstruction" class="visually-hidden calc-trigger" type="checkbox" id="fabledL" />
+                                <label class="btn btn-xwide btn-right" for="fabledL">Fabled Protector</label>
+                            </div></td>
+                            <td><div class="right" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                                <input aria-describedby="selectScreenInstruction" class="visually-hidden calc-trigger" type="checkbox" id="fabledR" />
+                                <label class="btn btn-xwide btn-left" for="fabledR">Fabled Protector</label>
+                                <input aria-describedby="selectScreenInstruction" class="visually-hidden calc-trigger" type="checkbox" id="ominousR" />
+                                <label class="btn btn-right" for="ominousR">Ominous Presence</label>
+                            </div></td>
+                        </tr>
+                        <tr>
                             <td><div class="left" title="Is this Pok&eacute;mon protected by Reflect and/or Light Screen?">
                                 <div hidden id="selectScreenInstruction">Is this Pok&eacute;mon protected by Reflect and/or Light Screen?</div>
                                 <input aria-describedby="selectScreenInstruction" class="visually-hidden calc-trigger" type="checkbox" id="reflectL" />
