--- a/honkalculate.html
+++ b/honkalculate.html
@@ -755,6 +755,20 @@
                         </div>
                     </div>
                     <div class="btn-group">
+                        <div class="left" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                            <input class="visually-hidden" type="checkbox" id="ominousL" />
+                            <label class="btn btn-left" for="ominousL">Ominous Presence</label>
+                            <input class="visually-hidden" type="checkbox" id="fabledL" />
+                            <label class="btn btn-xwide btn-right" for="fabledL">Fabled Protector</label>
+                        </div>
+                        <div class="right" title="Does this pokemon have the ability Ominous Presence active or Fabled Protector?">
+                            <input class="visually-hidden" type="checkbox" id="fabledR" />
+                            <label class="btn btn-xwide btn-left" for="fabledR">Fabled Protector</label>
+                            <input class="visually-hidden" type="checkbox" id="ominousR" />
+                            <label class="btn btn-right" for="ominousR">Ominous Presence</label>
+                        </div>
+                    </div>
+                    <div class="btn-group">
                         <div class="left" title="Is this Pok&eacute;mon protected by Reflect and/or Light Screen?">
                             <input class="visually-hidden" type="checkbox" id="reflectL" />
                             <label class="btn btn-left" for="reflectL">Reflect</label>
@@ -934,26 +948,26 @@
     <script type="text/javascript" src="./js/data/sets/gen1.js?d9901cd6"></script>
     <script type="text/javascript" src="./calc/data/types.js?a6b2445c"></script>
     <script type="text/javascript" src="./calc/data/natures.js?28612810"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?45cd1150"></script>
+    <script type="text/javascript" src="./calc/data/abilities.js?a8aa2702"></script>
     <script type="text/javascript" src="./calc/data/moves.js?f7fac4ba"></script>
     <script type="text/javascript" src="./calc/data/items.js?0409f13e"></script>
     <script type="text/javascript" src="./calc/data/index.js?abecbd82"></script>
     <script type="text/javascript" src="./calc/move.js?4a1aad80"></script>
     <script type="text/javascript" src="./calc/pokemon.js?1e459e1e"></script>
-    <script type="text/javascript" src="./calc/field.js?bbf04408"></script>
+    <script type="text/javascript" src="./calc/field.js?08f669f5"></script>
     <script type="text/javascript" src="./calc/items.js?10064fda"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?d1c58723"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?4f4935d9"></script>
+    <script type="text/javascript" src="./calc/mechanics/util.js?e5189833"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?e051ea63"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?a1115b60"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?dc25f845"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?2d9c2a31"></script>
+    <script type="text/javascript" src="./calc/desc.js?efb1646f"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?ffa1a8a6"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?20029e23"></script>
     <script type="text/javascript" src="./js/honkalculate_controls.js?2857a4ec"></script>
 
     <div style="clear:both;padding:20px;text-align:left">Created by Honko, maintained by Austin and Kris
