--- a/randoms.html
+++ b/randoms.html
@@ -785,13 +785,16 @@
                     <input class="visually-hidden calc-trigger" type="radio" name="gscWeather" value="Sand" id="gscSand" />
                     <label class="btn btn-small btn-right" for="gscSand">Sand</label>
                 </div>
-                <div class="gen-specific g5 g6 g7 g8 g9" style="width: 22.2em; margin: 5px auto; display: inline-block;">
+                <div class="gen-specific g5 g6 g7 g8 g9" style="margin: 5px auto; display: inline-block;">
                     <span hidden id="magicRoomInstruction">Is Magic Room in effect?</span>
                     <span hidden id="wonderRoomInstruction">Is Wonder Room in effect?</span>
+                    <span hidden id="panicRoomInstruction">Is Panic Room in effect?</span>
                     <input aria-describedby="magicRoomInstruction" class="visually-hidden calc-trigger" type="checkbox" id="magicroom" />
                     <label class="btn btn-xxxwide btn-left" for="magicroom">Magic Room</label>
                     <input aria-describedby="wonderRoomInstruction" class="visually-hidden calc-trigger" type="checkbox" id="wonderroom" />
-                    <label class="btn btn-xxxwide btn-right" for="wonderroom">Wonder Room</label>
+                    <label class="btn btn-xxxwide btn-mid" for="wonderroom">Wonder Room</label>
+                    <input aria-describedby="panicRoomInstruction" class="visually-hidden calc-trigger" type="checkbox" id="panicroom" />
+                    <label class="btn btn-xxxwide btn-right" for="panicroom">Panic Room</label>
                 </div>
                 <div class="gen-specific g4 g5 g6 g7 g8 g9" style="width: 5.3em; margin: 5px auto;" title="Is gravity in effect?">
                     <span hidden id="gravityInstruction">Is gravity in effect?</span>
@@ -1604,25 +1607,25 @@
     <script type="text/javascript" src="./calc/data/types.js?a6b2445c"></script>
     <script type="text/javascript" src="./calc/data/natures.js?28612810"></script>
     <script type="text/javascript" src="./calc/data/abilities.js?a8aa2702"></script>
-    <script type="text/javascript" src="./calc/data/moves.js?f7fac4ba"></script>
-    <script type="text/javascript" src="./calc/data/items.js?0409f13e"></script>
+    <script type="text/javascript" src="./calc/data/moves.js?2ed33b54"></script>
+    <script type="text/javascript" src="./calc/data/items.js?3a85fb94"></script>
     <script type="text/javascript" src="./calc/data/index.js?abecbd82"></script>
     <script type="text/javascript" src="./calc/move.js?4a1aad80"></script>
     <script type="text/javascript" src="./calc/pokemon.js?1e459e1e"></script>
-    <script type="text/javascript" src="./calc/field.js?08f669f5"></script>
+    <script type="text/javascript" src="./calc/field.js?f1822623"></script>
     <script type="text/javascript" src="./calc/items.js?10064fda"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?e5189833"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?e051ea63"></script>
+    <script type="text/javascript" src="./calc/mechanics/util.js?c525ebe9"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?46635cff"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?a1115b60"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?dc25f845"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?efb1646f"></script>
+    <script type="text/javascript" src="./calc/desc.js?41966f34"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?20029e23"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?568fab97"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?87d3bda8"></script>
     <script type="text/javascript" src="./js/moveset_import.js?b09106ef"></script>
 </div>
