--- a/randoms.html
+++ b/randoms.html
@@ -47,7 +47,7 @@
         <li><a class="button nav-last" href="//pokemonshowdown.com/forums/">Forum</a></li>
     </ul>
     <ul class="nav nav-play">
-        <li><a class="button greenbutton nav-first nav-last" href="//play.pokemonshowdown.com/">Play</a></li>
+        <li><a class="button greenbutton nav-first nav-last" href="//play.pokemonshowdown/">Play</a></li>
     </ul>
     <div style="clear:both"></div>
 </div></div></nav>
