--- a/honkalculate.html
+++ b/honkalculate.html
@@ -43,7 +43,7 @@
 <div class="header"><div class="header-inner">
     <ul class="nav">
         <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="100" height="50"/> Home</a></li>
-        <li><a class="button" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
+        <li><a class="button nav-last" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
         <!-- <li><a class="button" href="//replay.pokemonshowdown.com/">Replays</a></li>
         <li><a class="button" href="//pokemonshowdown.com/ladder/">Ladder</a></li> 
         <li><a class="button nav-last" href="//pokemonshowdown.com/forums/">Forum</a></li> -->
@@ -966,11 +966,11 @@
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?53783525"></script>
+    <script type="text/javascript" src="./calc/desc.js?9e52b4da"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?568fab97"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?2bbfe287"></script>
     <script type="text/javascript" src="./js/honkalculate_controls.js?2857a4ec"></script>
 
     <div style="clear:both;padding:20px;text-align:left">Created by Honko, maintained by Austin and Kris
