--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <nav><div class="header"><div class="header-inner">
     <ul class="nav">
         <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="100" height="50"/> Home</a></li>
-        <li><a class="button" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
+        <li><a class="button nav-last" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
         <!-- <li><a class="button" href="//replay.pokemonshowdown.com/">Replays</a></li>
         <li><a class="button" href="//pokemonshowdown.com/ladder/">Ladder</a></li> 
         <li><a class="button nav-last" href="//pokemonshowdown.com/forums/">Forum</a></li> -->
     </ul>
     <ul class="nav nav-play">
-        <li><a class="button greenbutton nav-first nav-last" href="//play.pokemonshowdown.com/">Play</a></li>
+        <li><a class="button greenbutton nav-first nav-last" href="//vikrambarr.com/">Play</a></li>
     </ul>
     <div style="clear:both"></div>
 </div></div></nav>
@@ -84,6 +84,8 @@
     <div aria-label="Move selection" class="move-result-group" role="region" title="Select a move to show detailed results.">
         <div  aria-labelledby="resultHeaderL" class="move-result-subgroup" role="radiogroup">
             <div class="result-move-header"><span id="resultHeaderL">Pok&eacute;mon 1's Moves (select one to show detailed results)</span>
+                <div title="Your Pokemon" id="pokemonSpriteL" class="sprite" href="" name="sprite">
+                </div>
             </div>
             <div>
                 <input class="result-move visually-hidden" type="radio" name="resultMove" id="resultMoveL1" checked="checked" aria-describedby="resultDamageL1" />
@@ -108,6 +110,8 @@
         </div>
         <div aria-labelledby="resultHeaderR" class="move-result-subgroup" role="radiogroup">
             <div class="result-move-header"><span id="resultHeaderR">Pok&eacute;mon 2's Moves (select one to show detailed results)</span>
+                <div title="Your Pokemon" id="pokemonSpriteR" class="sprite" href="" name="sprite">
+                </div>
             </div>
             <div>
                 <input class="result-move visually-hidden" type="radio" name="resultMove" id="resultMoveR1" aria-describedby="resultDamageR1" />
@@ -130,6 +134,9 @@
                 <span id="resultDamageR4">??? - ???%</span>
             </div>
         </div>
+    </div>
+    <div>
+        &nbsp;
     </div>
     <div aria-label="Calculation results" class="main-result-group" role="region">
         <div class="big-text" title="Click to copy.">
@@ -1620,12 +1627,12 @@
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?53783525"></script>
+    <script type="text/javascript" src="./calc/desc.js?9e52b4da"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?568fab97"></script>
-    <script type="text/javascript" src="./js/index_randoms_controls.js?87d3bda8"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?2bbfe287"></script>
+    <script type="text/javascript" src="./js/index_randoms_controls.js?5b5cc78c"></script>
     <script type="text/javascript" src="./js/moveset_import.js?b09106ef"></script>
 </div>
 
