--- a/randoms.html
+++ b/randoms.html
@@ -47,7 +47,7 @@
         <li><a class="button nav-last" href="//pokemonshowdown.com/forums/">Forum</a></li>
     </ul>
     <ul class="nav nav-play">
-        <li><a class="button greenbutton nav-first nav-last" href="//play.pokemonshowdown/">Play</a></li>
+        <li><a class="button greenbutton nav-first nav-last" href="//vikrambarr.com/">Play</a></li>
     </ul>
     <div style="clear:both"></div>
 </div></div></nav>
@@ -1621,12 +1621,12 @@
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?53783525"></script>
+    <script type="text/javascript" src="./calc/desc.js?9e52b4da"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?568fab97"></script>
-    <script type="text/javascript" src="./js/index_randoms_controls.js?87d3bda8"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?2bbfe287"></script>
+    <script type="text/javascript" src="./js/index_randoms_controls.js?5b5cc78c"></script>
     <script type="text/javascript" src="./js/moveset_import.js?b09106ef"></script>
 </div>
 
