--- a/honkalculate.template.html
+++ b/honkalculate.template.html
@@ -42,7 +42,8 @@
 
 <div class="header"><div class="header-inner">
     <ul class="nav">
-        <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="100" height="50"/> Home</a></li>
+        <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="166" height="50"/> Home</a></li>
+        <li><a class="button nav" href="https://discord.gg/fhhswGz6hN"> Our Discrd</a></li>
         <li><a class="button nav-last" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
         <!-- <li><a class="button" href="//replay.pokemonshowdown.com/">Replays</a></li>
         <li><a class="button" href="//pokemonshowdown.com/ladder/">Ladder</a></li> 
