--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
 <nav><div class="header"><div class="header-inner">
     <ul class="nav">
-        <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="100" height="50"/> Home</a></li>
+        <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="166" height="50"/> Home</a></li>
+        <li><a class="button" href="https://discord.gg/fhhswGz6hN"> Discord</a></li>
         <li><a class="button nav-last" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
         <!-- <li><a class="button" href="//replay.pokemonshowdown.com/">Replays</a></li>
         <li><a class="button" href="//pokemonshowdown.com/ladder/">Ladder</a></li> 
@@ -1600,7 +1601,7 @@
     </script>
     <script type="text/javascript" src="./calc/util.js?51463f0d"></script>
     <script type="text/javascript" src="./calc/stats.js?a9e37d1a"></script>
-    <script type="text/javascript" src="./calc/data/species.js?db0ac1fa"></script>
+    <script type="text/javascript" src="./calc/data/species.js?68efbf97"></script>
 	 <script type="text/javascript" src="./js/data/sets/gen9.js?63f765e3"></script>
     <script type="text/javascript" src="./js/data/sets/gen8.js?05586081"></script>
     <script type="text/javascript" src="./js/data/sets/gen7.js?c97a6381"></script>
