--- a/honkalculate.html
+++ b/honkalculate.html
@@ -43,7 +43,7 @@
 <div class="header"><div class="header-inner">
     <ul class="nav">
         <li><a class="button nav-first" href="//vikrambarr.com"><img src="http://vikrambarr.com/pokemonshowdownbetabw@2x.gif" alt="Plan of Attack!" width="166" height="50"/> Home</a></li>
-        <li><a class="button nav" href="https://discord.gg/fhhswGz6hN"> Our Discrd</a></li>
+        <li><a class="button" href="https://discord.gg/fhhswGz6hN"> Our Discrd</a></li>
         <li><a class="button nav-last" href="https://tinyurl.com/PoA-Changes">PoA Changes</a></li>
         <!-- <li><a class="button" href="//replay.pokemonshowdown.com/">Replays</a></li>
         <li><a class="button" href="//pokemonshowdown.com/ladder/">Ladder</a></li> 
@@ -950,10 +950,10 @@
     <script type="text/javascript" src="./js/data/sets/gen3.js?a7076793"></script>
     <script type="text/javascript" src="./js/data/sets/gen2.js?c495459f"></script>
     <script type="text/javascript" src="./js/data/sets/gen1.js?d9901cd6"></script>
-    <script type="text/javascript" src="./calc/data/types.js?a6b2445c"></script>
+    <script type="text/javascript" src="./calc/data/types.js?ad624122"></script>
     <script type="text/javascript" src="./calc/data/natures.js?28612810"></script>
     <script type="text/javascript" src="./calc/data/abilities.js?a8aa2702"></script>
-    <script type="text/javascript" src="./calc/data/moves.js?2ed33b54"></script>
+    <script type="text/javascript" src="./calc/data/moves.js?dd2acd2f"></script>
     <script type="text/javascript" src="./calc/data/items.js?62a85af7"></script>
     <script type="text/javascript" src="./calc/data/index.js?abecbd82"></script>
     <script type="text/javascript" src="./calc/move.js?4a1aad80"></script>
