--- a/index.html
+++ b/index.html
@@ -485,6 +485,13 @@
 							 <option value="spd">Special Defense</option>
 							 <option value="spe">Speed</option>
 						 </select>
+                         <select hidden aria-label="Heads" class="heads calc-trigger">
+                            <option value="5">5 Heads</option>
+                            <option value="6">6 Heads</option>
+                            <option value="7">7 Heads</option>
+                            <option value="8">8 Heads</option>
+                            <option value="9">9 Heads</option>
+                       </select>
                 </div>
                 <div class="gen-specific g2 g3 g4 g5 g6 g7 g8 g9">
                     <label for="itemL1">Item</label>
@@ -1394,6 +1401,13 @@
 							 <option value="spd">Special Defense</option>
 							 <option value="spe">Speed</option>
 						 </select>
+                         <select hidden aria-label="Heads" class="heads calc-trigger">
+                            <option value="5">5 Heads</option>
+                            <option value="6">6 Heads</option>
+                            <option value="7">7 Heads</option>
+                            <option value="8">8 Heads</option>
+                            <option value="9">9 Heads</option>
+                       </select>
                 </div>
                 <div class="gen-specific g2 g3 g4 g5 g6 g7 g8 g9">
                     <label for="itemR1">Item</label>
@@ -1618,21 +1632,21 @@
     <script type="text/javascript" src="./calc/data/items.js?62a85af7"></script>
     <script type="text/javascript" src="./calc/data/index.js?abecbd82"></script>
     <script type="text/javascript" src="./calc/move.js?4a1aad80"></script>
-    <script type="text/javascript" src="./calc/pokemon.js?1e459e1e"></script>
+    <script type="text/javascript" src="./calc/pokemon.js?d3e0c52d"></script>
     <script type="text/javascript" src="./calc/field.js?f1822623"></script>
     <script type="text/javascript" src="./calc/items.js?b97d423e"></script>
     <script type="text/javascript" src="./calc/mechanics/util.js?337bffbf"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?5fcd548b"></script>
+    <script type="text/javascript" src="./calc/mechanics/gen789.js?703e4355"></script>
     <script type="text/javascript" src="./calc/mechanics/gen56.js?a1115b60"></script>
     <script type="text/javascript" src="./calc/mechanics/gen4.js?dc25f845"></script>
     <script type="text/javascript" src="./calc/mechanics/gen3.js?2037ac24"></script>
     <script type="text/javascript" src="./calc/mechanics/gen12.js?621ace01"></script>
     <script type="text/javascript" src="./calc/calc.js?40a2d9b1"></script>
-    <script type="text/javascript" src="./calc/desc.js?9e52b4da"></script>
+    <script type="text/javascript" src="./calc/desc.js?a2ff6115"></script>
     <script type="text/javascript" src="./calc/result.js?9f8881b5"></script>
     <script type="text/javascript" src="./calc/adaptable.js?92e49194"></script>
     <script type="text/javascript" src="./calc/index.js?0b1745b9"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?2bbfe287"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?ad5e321a"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?8ebf37eb"></script>
     <script type="text/javascript" src="./js/moveset_import.js?b09106ef"></script>
 </div>
