--- a/index.template.html
+++ b/index.template.html
@@ -485,6 +485,13 @@
 							 <option value="spd">Special Defense</option>
 							 <option value="spe">Speed</option>
 						 </select>
+                         <select hidden aria-label="Heads" class="heads calc-trigger">
+                            <option value="5">5 Heads</option>
+                            <option value="6">6 Heads</option>
+                            <option value="7">7 Heads</option>
+                            <option value="8">8 Heads</option>
+                            <option value="9">9 Heads</option>
+                       </select>
                 </div>
                 <div class="gen-specific g2 g3 g4 g5 g6 g7 g8 g9">
                     <label for="itemL1">Item</label>
@@ -1394,6 +1401,13 @@
 							 <option value="spd">Special Defense</option>
 							 <option value="spe">Speed</option>
 						 </select>
+                         <select hidden aria-label="Heads" class="heads calc-trigger">
+                            <option value="5">5 Heads</option>
+                            <option value="6">6 Heads</option>
+                            <option value="7">7 Heads</option>
+                            <option value="8">8 Heads</option>
+                            <option value="9">9 Heads</option>
+                       </select>
                 </div>
                 <div class="gen-specific g2 g3 g4 g5 g6 g7 g8 g9">
                     <label for="itemR1">Item</label>
