--- a/index.html
+++ b/index.html
@@ -717,8 +717,10 @@
                 </div>
                 <div aria-labelledby="selectDefaultLevelInstruction" role="radiogroup" style="margin: auto auto 5px;" title="Select the default level.">
                    <span class="visually-hidden" id="selectDefaultLevelInstruction">Select the default level.</span>
+                   <input class="visually-hidden calc-trigger" type="radio" name="defaultLevel" value="120" id="default-level-120" />
+                   <label class="btn btn-wide btn-left" for="default-level-120">Level 120</label>
                    <input class="visually-hidden calc-trigger" type="radio" name="defaultLevel" value="100" id="default-level-100" />
-                   <label class="btn btn-wide btn-left" for="default-level-100">Level 100</label>
+                   <label class="btn btn-wide btn-mid" for="default-level-100">Level 100</label>
                    <input class="visually-hidden calc-trigger gen-specific g4 g5 g6 g7 g8 g9" type="radio" name="defaultLevel" value="50" id="default-level-50" />
                    <label class="btn btn-wide btn-mid gen-specific g4 g5 g6 g7 g8 g9" for="default-level-50">Level 50</label>
                    <input class="visually-hidden calc-trigger" type="radio" name="defaultLevel" value="5" id="default-level-5" />
@@ -1675,7 +1677,7 @@
     <script type="text/javascript" src="./calc/result.js?d5c7552b"></script>
     <script type="text/javascript" src="./calc/adaptable.js?afeb3759"></script>
     <script type="text/javascript" src="./calc/index.js?2377cbc8"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?ac70eff4"></script>
+    <script type="text/javascript" src="./js/shared_controls.js?bab94ec6"></script>
     <script type="text/javascript" src="./js/index_randoms_controls.js?13799446"></script>
     <script type="text/javascript" src="./js/moveset_import.js?988db89f"></script>
 </div>
